# pygyre

./: .gitignore  README.md  README.rst  pyproject.toml
doc/: requirements.txt
doc/source/: api-ref.rst  conf.py  example-walkthrough.rst  index.rst  installation.rst
docs/: requirements.txt
docs/source/: conf.py
source/: build.sh  setup.py
source/pygyre/: __init__.py  gyre.in  summary.txt
src/: setup.py  test.sh  upload.sh
test/: detail.l1.n-7.h5  summary.h5
