[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pygyre"
dynamic = ["version"]
authors = [
  { name="Rich Townsend", email="rhtownsend@wisc.edu" },
]
description = "Python support for the GYRE stellar oscillation code"
readme = "README.rst"
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.15.0",
    "astropy>=5.3.2",
    "h5py>=3.9.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
Documentation = "https://pygyre.readthedocs.org"
Repository = "https://github.com/rhdtownsend/pygyre/"
Issues = "https://github.com/rhdtownsend/pygyre/issues"

[tool.hatch.version]
path = "src/pygyre/_version.py"

[tool.hatch.build.targets.sdist]
only-include = ["src"]
